--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -4,3 +4,8 @@
   ansible.builtin.service:
     name: otelcol
     state: restarted
+
+- name: Restart Prometheus
+  ansible.builtin.service:
+    name: prometheus
+    state: restarted
