--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 ansible==6.4.0
 ansible-lint==6.7.0
+bcrypt==4.0.0
 flake8==5.0.4
 molecule==4.0.1
 molecule-docker==2.1.0
+passlib==1.7.4
 pytest==7.1.3
 pytest-testinfra==6.8.0
 yamllint==1.28.0
