--- a/files/prometheus.service
+++ b/files/prometheus.service
@@ -8,7 +8,7 @@ After=network-online.target
 Type=simple
 User=prometheus
 Group=prometheus
-ExecReload=/bin/kill -HUP \$MAINPID
+ExecReload=/bin/kill -HUP $MAINPID
 ExecStart=/usr/local/bin/prometheus \
   --config.file=/etc/prometheus/prometheus.yml \
   --web.config.file=/etc/prometheus/web.yml \
