Add OpenTelemetry stats to Prometheus

--- a/templates/prometheus.yml
+++ b/templates/prometheus.yml
@@ -32,3 +32,6 @@ scrape_configs:
 
     static_configs:
       - targets: ["localhost:9090"]
+  - job_name: "host_metrics"
+    static_configs:
+      - targets: ["localhost:9091"]
