--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -8,7 +8,7 @@
       tags:
         - always
     - name: Allow Prometheus UI in Molecule
-      ansible.builtin.ufw:
+      community.general.ufw:
         rule: allow
         port: 9090
         proto: tcp
